[chore] added feedback & coupons

--- a/.svgrrc
+++ b/.svgrrc
@@ -4,6 +4,6 @@
   "replaceAttrValues": {
     "#999999": "{props.stroke}",
     "#000000": "{props.stroke}",
-    "width": "{props.width}"
+    "#ffffff": "{props.stroke}",
   }
 }
