--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-easy-rating": "^0.2.1",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
