[chore] added authentication

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "pockapp",
+    "name": "Pockapp",
     "slug": "pockapp",
     "version": "1.0.0",
     "orientation": "portrait",
