--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
-    "expo": "~51.0.9",
+    "expo": "^51.0.10",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "^3.5.15",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "^3.0.5",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -39,6 +39,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-ui-datepicker": "^2.0.3",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
