--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@kolking/react-native-rating": "^1.3.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
@@ -41,7 +42,8 @@
     "react-native-svg-transformer": "^1.4.0",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "rneui": "^1.0.0-stable.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
