--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-tab-view-header": "^1.0.1",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
