--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@kolking/react-native-rating": "^1.3.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "expo": "^51.0.10",
@@ -36,8 +37,8 @@
     "react-native-easy-rating": "^0.2.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-tab-view": "^3.5.2",
