--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-tab-view-header": "^1.0.1",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.10.3",
     "react-redux": "^9.1.2",
     "rneui": "^1.0.0-stable.0"
   },
